--- a/style.css
+++ b/style.css
@@ -18,46 +18,99 @@ header {
     align-items: center;
 }
 
+.header-bar {
+    display: flex;
+    align-items: center;
+}
+
+.header-bar .logo {
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: 700;
+    flex: auto;
+}
+
+.header-bar .spacer {
+    min-width: 500px;
+}
+
+.header-bar .subtext {
+    display: flex;
+    gap: 15px;
+}
+
+.subtext a {
+    text-decoration: none;
+    color: #e5e7eb;
+    font-size: 18px;
+    text-align: center;
+    text-wrap: nowrap;
+}
+
 footer {
     display: flex;
     justify-content: center;
-}
-
-.header-bar {
-    display: flex;
-    justify-content: space-even;
-}
-
-.logo {
-    display: flex;
-    font-size: 24px;
-    color: #F9FAF8;
-    flex: auto;
-}
-
-.subtext {
-    display: flex;
-    flex: auto;
+    background-color:#1F2937;
+    color: #E5E7EB;
 }
 
 .hero {
+    display: flex;
+    min-height: 300px;
+    justify-content: center;
+    gap: 50px;
+    padding: 100px;
+}
+
+.title-box {
+    display: flex;
+    flex-direction: column;
+    width: 400px;
+}
+
+.title-box h1 {
+    font-size: 48px;
+    font-weight: 800;
+    color: #F9FAF8;
+
+}
+
+.title-box .subtext {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.title-box button {
+    padding: 8px;
+    border-radius: 8px;
+    border: none;
+    background-color: #3882F6;
+    width: 100px;
+    color: #F9FAF8;
+    font-weight: 600;
 }
 
 .CTA {
     display: flex;
     justify-content: center;
+    background-color: #3882F6;
+    color: 
 }
 
 .info {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    height: 100px;
+
+    padding: 100px;
 }
 
 .info h2 {
     flex: 1;
     align-self: center;
+    font-size: 36px;
+    font-weight: 800;
+    color: #1F2937;
 }
 
 .catalogue {
@@ -74,4 +127,16 @@ footer {
 
 .quote {
     display: flex;
+    background-color: #E5E7EB;
+    padding: 100px;
+}
+
+.quote .main {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+}
+
+.quote .author {
+    font-weight: 700;
 }
