--- a/style.css
+++ b/style.css
@@ -9,7 +9,12 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
-  }
+}
+
+.wrapper {
+    max-width: fit-content;
+    margin: 0 auto;
+}
 
 header {
     display: flex;
@@ -80,7 +85,7 @@ footer {
     color: #E5E7EB;
 }
 
-.title-box button {
+button {
     padding: 8px;
     border-radius: 8px;
     border: none;
@@ -88,13 +93,6 @@ footer {
     width: 100px;
     color: #F9FAF8;
     font-weight: 600;
-}
-
-.CTA {
-    display: flex;
-    justify-content: center;
-    background-color: #3882F6;
-    color: 
 }
 
 .info {
@@ -150,6 +148,37 @@ footer {
 
 .quote .author {
     font-weight: 700;
-    justify-self: end;
-    flex-basis: 100%;
+    text-align: end;
+}
+
+.CTA {
+    display: flex;
+    justify-content: center;
+    background-color: #3882F6;
+    color: #E5E7EB;
+    margin: 80px 200px;
+    border-radius: 6px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.CTA h3 {
+    margin-top: 30px;
+    margin-bottom: 0;
+}
+
+.CTA p {
+    margin-top: 0;
+    margin-bottom: 30px;
+}
+
+.CTA button {
+    border: 2px solid;
+    border-color: #F9FAF8;
+    width: 100px;
+}
+
+footer {
+    padding: 35px 100px;
+    margin: 0;
 }
